--- a/src/App.razor
+++ b/src/App.razor
@@ -2,16 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
-    <link rel="stylesheet" href="app.css"/>
-    <HeadOutlet @rendermode="InteractiveServer" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <base href="/"/>
+    @* <link rel="stylesheet" href="app.css"/> *@
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet"/>
+    <HeadOutlet @rendermode="InteractiveServer"/>
 </head>
 
 <body>
-    <Chatbot @rendermode="InteractiveServer" />
+    <MudThemeProvider/>
+    <MudPopoverProvider/>
+    @* <Chatbot @rendermode="InteractiveServer" /> *@
+    <BlazorChatbot @rendermode="InteractiveServer"/>
     <script src="_framework/blazor.web.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
+            
