--- a/src/wwwroot/app.css
+++ b/src/wwwroot/app.css
@@ -102,7 +102,7 @@
 .timestamp {
     font-size: 0.8rem;
     color: #888;
-    @* position: absolute;
-    *@ bottom: 5px;
+    position: absolute;
+    bottom: 5px;
     right: 10px;
 }
